Added a few gradients

--- a/Compenergy/app/src/main/res/drawable/gradient_indigo_light_blue.xml
+++ b/Compenergy/app/src/main/res/drawable/gradient_indigo_light_blue.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="135"
-        android:endColor="@color/colorAmber_A400"
-        android:startColor="@color/colorAmber_900" />
+        android:endColor="@color/indigo"
+        android:startColor="@color/light_blue" />
 </shape>
