--- a/Compenergy/app/src/main/res/values/colors.xml
+++ b/Compenergy/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#99d066</color>
 
     <color name="dark_text">#212121</color>
-    <color name="gray_text">#757575</color>
+    <color name="gray_text">#424242</color>
 
     <!-- 1st Gradient color -->
     <color name="colorPurple_A400">#D500F9</color>
@@ -26,4 +26,25 @@
     <color name="colorRed_A400">#FF1744</color>
     <color name="colorRed_900">#B71C1C</color>
     <!-- ./ 4th Gradient color -->
+
+    <!-- Gradient Colors -->
+    <color name="red">#ef9a9a</color>
+    <color name="pink">#f48fb1</color>
+    <color name="purple">#ce93d8</color>
+    <color name="deep_purple">#b39ddb</color>
+    <color name="indigo">#9fa8da</color>
+    <color name="blue">#90caf9</color>
+    <color name="light_blue">#81d4fa</color>
+    <color name="cyan">#80deea</color>
+    <color name="teal">#80cbc4</color>
+    <color name="green">#a5d6a7</color>
+    <color name="light_green">#c5e1a5</color>
+    <color name="lime">#e6ee9c</color>
+    <color name="yellow">#fff59d</color>
+    <color name="amber">#ffe082</color>
+    <color name="orange">#ffcc80</color>
+    <color name="deep_orange">#ffab91</color>
+    <color name="brown">#bcaaa4</color>
+    <color name="grey">#eeeeee</color>
+    <color name="blue_grey">#b0bec5</color>
 </resources>
