--- a/Compenergy/app/src/main/res/layout/fragment_compare_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_compare_layout.xml
@@ -15,16 +15,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="top|start"
-        android:padding="8dp" >
+        android:padding="16dp" >
 
         <TextView
             android:id="@+id/fragment_compare_upper_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="textStart"
-            android:textSize="36sp"
+            android:textSize="45sp"
             android:textColor="@color/dark_text"
-            android:textStyle="bold"
+            android:textStyle="normal"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_alignParentStart="true"
@@ -46,9 +46,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
-                android:textSize="22sp"
+                android:textSize="24sp"
                 android:textColor="@color/gray_text"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:text="@string/placeholder_test_item_1_energy" />
@@ -58,9 +58,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textColor="@color/gray_text"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginStart="8dp"
@@ -77,7 +77,7 @@
         android:layout_weight="1"
         android:orientation="vertical"
         android:gravity="center"
-        android:padding="8dp">
+        android:padding="16dp">
 
         <LinearLayout
             android:id="@+id/fragment_compare_middle_upper_layout"
@@ -90,9 +90,9 @@
                 android:id="@+id/fragment_compare_upper_item_compare_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="32sp"
+                android:textSize="45sp"
                 android:textColor="@color/dark_text"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:text="@string/placeholder_test_item_1_compare_value"/>
@@ -102,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:textColor="@color/gray_text"
                 android:maxLines="1"
                 android:ellipsize="end"
@@ -132,7 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:textColor="@color/gray_text"
                 android:maxLines="1"
                 android:ellipsize="end"
@@ -143,9 +143,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end|bottom"
-                android:textSize="32sp"
+                android:textSize="45sp"
                 android:textColor="@color/dark_text"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:text="@string/placeholder_test_item_2_compare_value"/>
@@ -160,16 +160,16 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="bottom|end"
-        android:padding="8dp" >
+        android:padding="16dp" >
 
         <TextView
             android:id="@+id/fragment_compare_lower_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="textEnd"
-            android:textSize="36sp"
+            android:textSize="45sp"
             android:textColor="@color/dark_text"
-            android:textStyle="bold"
+            android:textStyle="normal"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_alignParentStart="false"
@@ -191,9 +191,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="bottom"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textColor="@color/gray_text"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginEnd="8dp"
@@ -204,9 +204,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="bottom"
-                android:textSize="22sp"
+                android:textSize="24sp"
                 android:textColor="@color/gray_text"
-                android:textStyle="bold"
+                android:textStyle="normal"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:text="@string/placeholder_test_item_2_energy" />
