--- a/Compenergy/app/src/main/res/drawable/gradient_animation_list.xml
+++ b/Compenergy/app/src/main/res/drawable/gradient_animation_list.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/gradient_red_green"
+        android:drawable="@drawable/gradient_cyan_deep_orange"
         android:duration="6000" />
     <item
         android:drawable="@drawable/gradient_pink_light_green"
         android:duration="6000" />
     <item
+        android:drawable="@drawable/gradient_indigo_light_blue"
+        android:duration="6000" />
+    <item
+        android:drawable="@drawable/gradient_light_green_gray"
+        android:duration="6000" />
+    <item
+        android:drawable="@drawable/gradient_blue_amber"
+        android:duration="6000" />
+    <item
         android:drawable="@drawable/gradient_purple_lime"
         android:duration="6000" />
     <item
-        android:drawable="@drawable/gradient_deep_purple_teal"
+        android:drawable="@drawable/gradient_red_green"
         android:duration="6000" />
     <item
-        android:drawable="@drawable/gradient_indigo_light_blue"
+        android:drawable="@drawable/gradient_teal_orange"
+        android:duration="6000" />
+    <item
+        android:drawable="@drawable/gradient_green_yellow"
+        android:duration="6000" />
+    <item
+        android:drawable="@drawable/gradient_brown_blue_grey"
+        android:duration="6000" />
+    <item
+        android:drawable="@drawable/gradient_deep_purple_teal"
         android:duration="6000" />
 </animation-list>
