--- a/Compenergy/app/src/main/res/layout/fragment_favorites_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_favorites_layout.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="0dp" >
 
-    <TextView
-        android:id="@+id/fragment_favorites_txt_test"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+    <EditText
+        android:id="@+id/fragment_favorites_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Favorites Fragment"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textAlignment="center" />
+        android:inputType="text"
+        android:hint="@string/data_search_hint"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:drawableEnd="@drawable/ic_close_black_24dp"/>
 
-</RelativeLayout>
+    <ExpandableListView
+        android:id="@+id/fragment_favorites_expandable_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:groupIndicator="@null" />
+
+</LinearLayout>
