--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -11,7 +11,7 @@
     tools:ignore="Overdraw">
 
     <TextView
-        android:id="@+id/fragment_data_list_view_category"
+        android:id="@+id/list_view_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -28,7 +28,7 @@
         android:ellipsize="end" />
 
     <ImageView
-        android:id="@+id/fragment_data_list_view_category_icon"
+        android:id="@+id/list_view_category_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
