Added a toggle button for every favorite item in the list

--- a/Compenergy/app/src/main/res/layout/listview_item_favorite_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_favorite_layout.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) Johannes Mols 2017.
-  -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,15 +10,26 @@
     android:paddingBottom="8dp"
     android:descendantFocusability="blocksDescendants" >
 
-        <TextView
-            android:id="@+id/fragment_favorite_list_view_carrier_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/placeholder_item_listview"
-            android:textSize="18sp"
-            android:textStyle="normal"
-            android:textColor="@android:color/primary_text_light"
-            android:maxLines="1"
-            android:ellipsize="end" />
+    <TextView
+        android:id="@+id/fragment_favorites_list_view_carrier_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/placeholder_item_listview"
+        android:textSize="18sp"
+        android:textStyle="normal"
+        android:textColor="@android:color/primary_text_light"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/fragment_favorites_toggle"
+        android:ellipsize="end"
+        android:maxLines="1" />
+
+    <CheckBox
+        android:id="@+id/fragment_favorites_toggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:layout_alignParentEnd="true"
+        android:button="@drawable/fav_check_black"
+        android:text="" />
 
 </RelativeLayout>
