--- a/Compenergy/app/src/main/res/layout/listview_item_favorite_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_favorite_layout.xml
@@ -28,6 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="true"
         android:layout_alignParentEnd="true"
         android:button="@drawable/fav_check_black"
         android:text="" />
