--- a/Compenergy/app/src/main/res/layout/fragment_help_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_help_layout.xml
@@ -4,16 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/fragment_help_txt_test"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:id="@+id/fragment_help_txt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Help Fragment"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textAlignment="center" />
+        android:layout_height="match_parent"
+        android:textAlignment="textStart"
+        android:textSize="16sp"
+        android:textColor="@color/dark_text"
+        android:text="@string/help_text"/>
 
 </RelativeLayout>
