--- a/Compenergy/app/src/main/res/layout/dialog_change_value.xml
+++ b/Compenergy/app/src/main/res/layout/dialog_change_value.xml
@@ -5,10 +5,11 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp" >
+    android:padding="?dialogPreferredPadding" >
 
     <EditText
         android:id="@+id/dialog_change_value_edit"
+        android:labelFor="@id/dialog_change_value_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
