--- a/Compenergy/app/src/main/res/layout/dialog_change_value.xml
+++ b/Compenergy/app/src/main/res/layout/dialog_change_value.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
         android:maxLines="1"
-        android:ellipsize="end" />
+        android:ellipsize="end"
+        android:drawableEnd="@drawable/ic_close_black_24dp"/>
 
 </LinearLayout>
