--- a/Compenergy/app/src/main/res/layout/dialog_change_value.xml
+++ b/Compenergy/app/src/main/res/layout/dialog_change_value.xml
@@ -2,6 +2,7 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +16,26 @@
         android:inputType="numberDecimal"
         android:maxLines="1"
         android:ellipsize="end"
-        android:drawableEnd="@drawable/ic_close_black_24dp"/>
+        android:layout_marginBottom="8dp"
+        android:drawableEnd="@drawable/ic_close_black_24dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" >
+
+        <EditText
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="LabelFor,TextFields" />
+
+        <Spinner
+            android:id="@+id/fragment_compare_change_value_unit_spinner_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/Widget.AppCompat.Spinner.Underlined"/>
+
+    </FrameLayout>
 
 </LinearLayout>
