--- a/Compenergy/app/src/main/res/layout/fragment_help_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_help_layout.xml
@@ -2,18 +2,28 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/fragment_help_txt"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAlignment="textStart"
-        android:textSize="16sp"
-        android:textColor="@color/dark_text"
-        android:text="@string/help_text"/>
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:fillViewport="true"
+        tools:ignore="UselessParent">
+
+        <TextView
+            android:id="@+id/fragment_help_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:textSize="16sp"
+            android:textColor="@color/dark_text"
+            android:text="@string/help_text"/>
+
+    </ScrollView>
 
 </RelativeLayout>
