--- a/Compenergy/app/src/main/res/layout/act_main_nav_drawer_header.xml
+++ b/Compenergy/app/src/main/res/layout/act_main_nav_drawer_header.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:contentDescription="@string/content_description_nav_drawer_icon"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:layout_width="match_parent"
