Committing all files because I fucked up, should be all identical. Also added a bunch of compatibilty issue solutions that I thought I already added

--- a/Compenergy/app/src/main/res/layout/act_select_item_content.xml
+++ b/Compenergy/app/src/main/res/layout/act_select_item_content.xml
@@ -27,7 +27,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:drawableEnd="@drawable/ic_close_black_24dp" />
+        android:drawableEnd="@drawable/ic_close_black_24dp"
+        android:drawableRight="@drawable/ic_close_black_24dp"/>
 
     <ExpandableListView
         android:id="@+id/act_select_expandable_list_view"
