--- a/Compenergy/app/src/main/res/layout/act_edit_layout.xml
+++ b/Compenergy/app/src/main/res/layout/act_edit_layout.xml
@@ -27,6 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:button="@drawable/fav_check_white"
                 android:text="" />
 
