--- a/Compenergy/app/src/main/res/layout/fragment_favorites_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_favorites_layout.xml
@@ -17,7 +17,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:drawableEnd="@drawable/ic_close_black_24dp"/>
+        android:drawableEnd="@drawable/ic_close_black_24dp"
+        android:drawableRight="@drawable/ic_close_black_24dp"/>
 
     <ExpandableListView
         android:id="@+id/fragment_favorites_expandable_list_view"
