--- a/Compenergy/app/src/main/res/layout/fragment_help_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_help_layout.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="textStart"
+            android:layout_gravity="start"
             android:textSize="16sp"
             android:textColor="@color/dark_text"
             android:text="@string/help_text"/>
