--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:gravity="start"
         android:textStyle="bold"
         android:textSize="18sp"
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_gravity="end"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
