--- a/Compenergy/app/src/main/res/layout/listview_item_submit_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_submit_data_layout.xml
@@ -19,7 +19,9 @@
         android:textStyle="normal"
         android:textColor="@android:color/primary_text_light"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_toStartOf="@+id/fragment_submit_data_toggle"
+        android:layout_toLeftOf="@+id/fragment_submit_data_toggle"
         android:ellipsize="end"
         android:maxLines="1" />
 
@@ -32,6 +34,7 @@
         android:focusableInTouchMode="false"
         android:clickable="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:button="@drawable/submit_data_check_black"
         android:text="" />
 
