--- a/Compenergy/app/src/main/res/layout/dialog_change_value.xml
+++ b/Compenergy/app/src/main/res/layout/dialog_change_value.xml
@@ -17,8 +17,7 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginBottom="8dp"
-        android:drawableEnd="@drawable/ic_close_black_24dp"
-        android:drawableRight="@drawable/ic_close_black_24dp"/>
+        android:drawableEnd="@drawable/ic_close_black_24dp" />
 
     <FrameLayout
         android:layout_width="match_parent"
