--- a/Compenergy/app/src/main/res/layout/fragment_submit_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_submit_data_layout.xml
@@ -17,8 +17,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:drawableEnd="@drawable/ic_close_black_24dp"
-        android:drawableRight="@drawable/ic_close_black_24dp"/>
+        android:drawableEnd="@drawable/ic_close_black_24dp"/>
 
     <ExpandableListView
         android:id="@+id/fragment_submit_data_expandable_list_view"
